--- a/gc_trigger.html
+++ b/gc_trigger.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('gc-trigger',{
-        category: 'function',
-        color: '#a6bbcf',
+        category: 'memory',
+        color: '#E198EA',
         defaults: {
             display: {value:true},
             name: {value:""}
